# New_Year

./: CMakeLists.txt  fir.cpp  fir.h  light.cpp  light.h  main.cpp  snowflake.cpp  snowflake.h
old/: main_old.cpp
src/: fir.cpp  fir.h  hare.cpp  hare.h  light.cpp  main.cpp  snow_cover.cpp  snow_cover.h  snowflake.cpp  snowflake.h  toolbox.cpp  toolbox.h
